--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -3,7 +3,7 @@
     background: var( --theme-light-color);
     color: white;
     height: 100%;
-    min-height: 900px;
+    min-height: 100vh;
     width: 100%;
 
 }
