--- a/src/components/cards/items/items.css
+++ b/src/components/cards/items/items.css
@@ -46,3 +46,11 @@
 .img > h6{
     margin-top: 15px;
 }
+
+@media only screen and (max-width:500px) {
+    .container{
+        height:120px;
+        width:250px;
+        font-size:12px
+    }
+}
