--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -5,15 +5,22 @@
     height: 100%;
     min-height: 100vh;
     width: 100%;
+    padding:20px;
 
 }
 
 .homepage > .leftBar{
     flex: 1 1 0;
+    margin-right:30px
 }
 .homepage > .main{
     flex: 4 1 0;
 }
 
+@media (max-width: 600px){
+    .homepage{
+        flex-direction: column;
+    }
+}
 
 
